# cc-installer-tauri

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/adapters/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: AdvancedSettingsTab.jsx  ApiConfigTab.jsx  BackupTab.jsx  EnvOverview.jsx  EnvTab.jsx  Footer.jsx  Header.jsx  HelpTab.jsx  InstallConfigTab.jsx  InstallProgress.jsx  LatestNews.jsx  LogsTerminal.jsx  QuickInstall.jsx  ShortcutsTab.jsx  Sidebar.jsx  TemplatesTab.jsx  TerminalConfigTab.jsx  UtilityTools.jsx  WelcomeBanner.jsx
