[package]
name = "cc-installer-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cc_installer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization (LTO)
codegen-units = 1    # Reduce parallel compilation units to maximize size reduction
panic = "abort"      # Direct abort on panic to reduce binary footprint
strip = true         # Strip symbols and debugging tables

